<resources>
    <string name="app_name">ACS</string>
    <string name="title_activity_geral">Geral</string>
    <string name="title_activity_cadastrar_editar_pessoas">CadastrarEditarPessoas</string>
    <string name="title_activity_login">Login</string>
    <string name="lbl_nome">Nome Completo</string>
    <string name="lbl_endereco">Endereço</string>
    <string name="lbl_NumeroEndereco">Número</string>
    <string name="lbl_TelefoneResidencialComerial">Telefone Residencial</string>
    <string name="lbl_CartaoSus">Cartão SUS</string>
    <string name="lbl_DataNascimento">Dt. Nascimento</string>
    <string name="rdb_masculino">Masculino</string>
    <string name="rdb_feminino">Feminino</string>
    <string name="rdb_outros">Outros</string>
    <string name="lbl_condicionalidades">Condicionalidades</string>
    <string name="cb_HipertencaoArterial">H. Arterial</string>
    <string name="cb_tDiabetico">Diabético</string>
    <string name="cb_Cancer">Câncer</string>
    <string name="cb_Fumante">Fumante</string>
    <string name="cb_Domiciliado">Domiciliado</string>
    <string name="cb_Acamado">Acamado</string>
    <string name="cb_Deficiente">Deficiente</string>
    <string name="cb_Gestante">Gestante</string>
    <string name="btn_Salvar">Salvar</string>
    <string name="btn_Excluir">Excluir</string>
    <string name="btn_NovoRegistro">Adicionar</string>
    <string name="title_activity_telefones">Telefones</string>
    <string name="lbl_CadastrarPessoas">Cadastrar Pessoas</string>
    <string name="lbl_Login">Login</string>
    <string name="lbl_Senha">Senha</string>
    <string name="btn_Logar">Logar</string>
    <string name="lbl_Complemento">Complemento</string>
    <string name="lbl_Bairro">Bairro</string>
    <string name="cb_Responsavel">Responsável Familiar</string>
    <string name="cb_Falecido">Falecido</string>
    <string name="rdb_Ativo">Ativo</string>
    <string name="rdb_Inativo">Inativo</string>
    <string name="lbl_TelefoneCelular">Celular</string>
    <string name="btn_Cadastrar">Cadastrar</string>
    <string name="lbl_NumeroFamiliaDigitado">Número da família</string>
    <string name="lbl_Geral">Geral</string>
    <string name="digite_sua_matricula">Digite sua matrícula</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="lbl_NaoTemCadastro">Não tem cadastro? Cadastre-se</string>
    <string name="digite_seu_nome">Gigite seu nome</string>
    <string name="digite_confirme_sua_senha">Confirme sua senha</string>
    <string name="lbl_cadastrarUsuario">Cadastrar Usuário</string>
</resources>
