<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CadastrarUsuarioActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="60dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="abrirActivityLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <TextView
            android:id="@+id/textCadastrarPessoa3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/lbl_cadastrarUsuario"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/textInputLayout6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread_inside"
                    app:srcCompat="@drawable/ic_adicionar" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtNomeCadastro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/digite_seu_nome"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtUsuarioCadastro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/digite_seu_Usuario"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/textInputLayout5"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtSenhaCadastro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/digite_sua_senha"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/btnCadastrarCadastro"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout4"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtSenhaConfirmadaCadastro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/digite_confirme_sua_senha"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnCadastrarCadastro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimary"
                    android:onClick="CadastrarUsuario"
                    android:text="@string/btn_Cadastrar"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout5" />

                <TextView
                    android:id="@+id/txtEspaco"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/btnCadastrarCadastro"
                    app:layout_constraintStart_toStartOf="@+id/btnCadastrarCadastro"
                    app:layout_constraintTop_toBottomOf="@+id/btnCadastrarCadastro" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>